<resources>
    <string name="app_name">PetShop</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">PetAll</string>
    <string name="second_fragment_label">PetAll</string>
    <string name="previous">Previous</string>

    <string name="PetShops">Pet Shops</string>
    <string name="Food">Food</string>
    <string name="Toys">Toys</string>
    <string name="Transport">Cages</string>
    <string name="Clothes">Clothes</string>
    <string name="Item_list">Item1\nItem2\nItem3\nItem4\nItem5\nItem6\nItem7\nItem8\nItem9\nItem10</string>
</resources>